--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from bootstrapget.com/demos/medflex-medical-admin-template/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Nov 2024 00:43:00 GMT -->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -449,12 +448,12 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <div class="avatar-box">JB<span class="status busy"></span></div>
+              <div class="avatar-box">NG<span class="status busy"></span></div>
             </a>
             <div class="dropdown-menu dropdown-menu-end shadow-lg">
               <div class="px-3 py-2">
                 <span class="small">Admin</span>
-                <h6 class="m-0">James Bruton</h6>
+                <h6 class="m-0">Nick Gonzalez</h6>
               </div>
               <div class="mx-3 my-2 d-grid">
                 <a href="login.html" class="btn btn-danger">Logout</a>
@@ -1050,7 +1049,7 @@
                         </div>
                         <div class="d-flex align-items-center">
                           <div class="icon-box lg bg-lime rounded-3 me-3">
-                            <i class="ri-lungs-line fs-4"></i>
+                            <i class="ri-hand-heart-line fs-4"></i>
                           </div>
                           <div class="d-flex flex-column">
                             <h2 class="m-0 lh-1">3</h2>
@@ -1454,7 +1453,7 @@
 
           <!-- App footer starts -->
           <div class="app-footer bg-white">
-            <span>© Medflex admin 2024</span>
+            <span>© Mama Track admin 2024</span>
           </div>
           <!-- App footer ends -->
         </div>
@@ -1492,6 +1491,4 @@
     <!-- Custom JS files -->
     <script src="assets/js/custom.js"></script>
   </body>
-
-  <!-- Mirrored from bootstrapget.com/demos/medflex-medical-admin-template/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Nov 2024 00:43:26 GMT -->
 </html>
