--- a/index.html
+++ b/index.html
@@ -503,12 +503,12 @@
                   <span class="menu-text">Medical Dashboard</span>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="dashboard3.html">
                   <i class="ri-home-5-line"></i>
                   <span class="menu-text">Dentist Dashboard</span>
                 </a>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-stethoscope-line"></i>
@@ -873,12 +873,12 @@
                   <span class="menu-text">Account Settings</span>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="typography.html">
                   <i class="ri-font-size"></i>
                   <span class="menu-text">Typography</span>
                 </a>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-login-circle-line"></i>
@@ -950,20 +950,20 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="default.html">
                   <i class="ri-send-plane-line"></i>
                   <span class="menu-text">External Link</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-exchange-line"></i>
                   <span class="menu-text">Chip</span>
                   <span class="badge bg-primary ms-auto">6</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-ticket-line"></i>
                   <span class="menu-text">Badge</span>
@@ -971,7 +971,7 @@
                     >Chip</span
                   >
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="#!" class="disabled">
                   <i class="ri-magic-line"></i>
@@ -1049,11 +1049,11 @@
                         </div>
                         <div class="d-flex align-items-center">
                           <div class="icon-box lg bg-lime rounded-3 me-3">
-                            <i class="ri-hand-heart-line fs-4"></i>
+                            <i class="ri-empathize-line fs-4"></i>
                           </div>
                           <div class="d-flex flex-column">
                             <h2 class="m-0 lh-1">3</h2>
-                            <p class="m-0">Surgeries</p>
+                            <p class="m-0">On going Labor</p>
                           </div>
                         </div>
                         <div class="d-flex align-items-center">
@@ -1089,7 +1089,7 @@
                         </div>
                       </div>
                       <div class="d-flex flex-column">
-                        <h2 class="lh-1">890</h2>
+                        <h2 class="lh-1">50</h2>
                         <p class="m-0">New Patients</p>
                       </div>
                     </div>
@@ -1118,12 +1118,12 @@
                         class="p-2 border border-primary rounded-circle me-3"
                       >
                         <div class="icon-box md bg-primary-subtle rounded-5">
-                          <i class="ri-lungs-line fs-4 text-primary"></i>
+                          <i class="ri-hand-heart-line fs-4 text-primary"></i>
                         </div>
                       </div>
                       <div class="d-flex flex-column">
-                        <h2 class="lh-1">360</h2>
-                        <p class="m-0">OPD Patients</p>
+                        <h2 class="lh-1">20</h2>
+                        <p class="m-0">Delivery</p>
                       </div>
                     </div>
                     <div
@@ -1437,7 +1437,7 @@
               <div class="col-xxl-3 col-sm-6">
                 <div class="card mb-3">
                   <div class="card-header">
-                    <h5 class="card-title">Patients by Gender</h5>
+                    <h5 class="card-title">Newborn Gender</h5>
                   </div>
                   <div class="card-body">
                     <div class="auto-align-graph">
