Update on Dashboard

--- a/dashboard2.html
+++ b/dashboard2.html
@@ -1030,7 +1030,7 @@
                             </div>
                             <div class="d-flex flex-column">
                               <h2 class="m-0 lh-1">3</h2>
-                              <p class="m-0">Surgeries</p>
+                              <p class="m-0">In Labor</p>
                             </div>
                           </div>
                         </div>
@@ -1090,9 +1090,9 @@
                                     <p class="mb-1">Neurologist</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly5"></div>
+                                        <!-- <div class="readonly5"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">5</span>
+                                      <!-- <span class="ms-1 lh-1">5</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1111,9 +1111,9 @@
                                     <p class="mb-1">Radiologist</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly4"></div>
+                                        <!-- <div class="readonly4"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">4</span>
+                                      <!-- <span class="ms-1 lh-1">4</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1136,9 +1136,9 @@
                                     <p class="mb-1">Dentist</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly4"></div>
+                                        <!-- <div class="readonly4"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">4</span>
+                                      <!-- <span class="ms-1 lh-1">4</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1157,9 +1157,9 @@
                                     <p class="mb-1">Therapist</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly3"></div>
+                                        <!-- <div class="readonly3"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">3.5</span>
+                                      <!-- <span class="ms-1 lh-1">3.5</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1182,9 +1182,9 @@
                                     <p class="mb-1">Pediatrics</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly4"></div>
+                                        <!-- <div class="readonly4"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">4</span>
+                                      <!-- <span class="ms-1 lh-1">4</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1203,9 +1203,9 @@
                                     <p class="mb-1">Gynecologist</p>
                                     <div class="d-flex align-items-center">
                                       <div class="rating-stars-sm">
-                                        <div class="readonly5"></div>
+                                        <!-- <div class="readonly5"></div> -->
                                       </div>
-                                      <span class="ms-1 lh-1">5</span>
+                                      <!-- <span class="ms-1 lh-1">5</span> -->
                                     </div>
                                   </div>
                                 </div>
@@ -1239,7 +1239,7 @@
               <div class="col-xxl-6 col-sm-12">
                 <div class="card mb-3">
                   <div class="card-header">
-                    <h5 class="card-title">Upcoming Surgeries</h5>
+                    <h5 class="card-title">Upcoming Delivery</h5>
                   </div>
                   <div class="card-body">
                     <div
