--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -1035,9 +1035,9 @@
                                 >
                                 today.
                               </h5>
-                              <div class="rating-stars">
+                              <!-- <div class="rating-stars">
                                 <div class="readonly5"></div>
-                              </div>
+                              </div> -->
                             </div>
                           </div>
                         </div>
@@ -1076,10 +1076,12 @@
                             <div
                               class="icon-box xl bg-danger-subtle rounded-5 mb-2 no-shadow"
                             >
-                              <i class="ri-lungs-line fs-1 text-danger"></i>
+                              <i
+                                class="ri-hand-heart-line fs-1 text-danger"
+                              ></i>
                             </div>
                             <h1 class="text-danger">906</h1>
-                            <h6>Surgeries</h6>
+                            <h6>Delivery</h6>
                             <span class="badge bg-danger">26% High</span>
                           </div>
                         </div>
@@ -1172,7 +1174,7 @@
                               lot.
                             </p>
                             <div class="rating-stars">
-                              <div class="readonly5"></div>
+                              <!-- <div class="readonly5"></div> -->
                             </div>
                           </div>
                         </div>
@@ -1192,7 +1194,7 @@
                               me in changing my lifestyle habits.
                             </p>
                             <div class="rating-stars">
-                              <div class="readonly5"></div>
+                              <!-- <div class="readonly5"></div> -->
                             </div>
                           </div>
                         </div>
@@ -1212,7 +1214,7 @@
                               and avoided hospital admission.
                             </p>
                             <div class="rating-stars">
-                              <div class="readonly4"></div>
+                              <!-- <div class="readonly4"></div> -->
                             </div>
                           </div>
                         </div>
@@ -1230,7 +1232,7 @@
                               a diabetic patient.
                             </p>
                             <div class="rating-stars">
-                              <div class="readonly5"></div>
+                              <!-- <div class="readonly5"></div> -->
                             </div>
                           </div>
                         </div>
@@ -1247,7 +1249,7 @@
                               human being more than a doctor.
                             </p>
                             <div class="rating-stars">
-                              <div class="readonly4"></div>
+                              <!-- <div class="readonly4"></div> -->
                             </div>
                           </div>
                         </div>
