--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-building-2-line"></i>
                   <span class="menu-text">Departments</span>
@@ -608,7 +608,7 @@
                     <a href="edit-department.html">Edit Department</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-secure-payment-line"></i>
@@ -698,7 +698,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-car-washing-line"></i>
                   <span class="menu-text">Ambulance</span>
@@ -718,7 +718,7 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <li> -->
                 <a href="events.html">
                   <i class="ri-calendar-line"></i>
                   <span class="menu-text">Event Management</span>
@@ -736,7 +736,7 @@
                   <span class="menu-text">News & Updates</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-color-filter-line"></i>
                   <span class="menu-text">UI Elements</span>
@@ -779,8 +779,8 @@
                     <a href="spinners.html">Spinners</a>
                   </li>
                 </ul>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-notification-badge-line"></i>
                   <span class="menu-text">Jquery Components</span>
@@ -805,8 +805,8 @@
                     <a href="tooltips.html">Tooltips</a>
                   </li>
                 </ul>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-terminal-window-line"></i>
                   <span class="menu-text">Forms</span>
@@ -834,14 +834,14 @@
                     <a href="form-tags.html">Input Tags</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="tables.html">
                   <i class="ri-table-line"></i>
                   <span class="menu-text">Tables</span>
                 </a>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-bar-chart-line"></i>
                   <span class="menu-text">Graphs</span>
@@ -854,19 +854,19 @@
                     <a href="morris.html">Morris Graphs</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="maps.html">
                   <i class="ri-road-map-line"></i>
                   <span class="menu-text">Vector Maps</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="icons.html">
                   <i class="ri-send-plane-2-line"></i>
                   <span class="menu-text">Icons</span>
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="settings.html">
                   <i class="ri-settings-5-line"></i>
@@ -899,19 +899,19 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="page-not-found.html">
                   <i class="ri-alert-line"></i>
                   <span class="menu-text">Page Not Found</span>
                 </a>
               </li>
-              <li>
+              <li> -->
                 <a href="maintenance.html">
                   <i class="ri-auction-line"></i>
                   <span class="menu-text">Maintenance</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-dropdown-list"></i>
                   <span class="menu-text">Menu Level</span>
@@ -948,7 +948,7 @@
                   <li>
                     <a href="#!">Level One Link</a>
                   </li>
-                </ul>
+                </ul> -->
               </li>
               <!-- <li>
                 <a href="default.html">
@@ -972,12 +972,12 @@
                   >
                 </a>
               </li> -->
-              <li>
+              <!-- <li>
                 <a href="#!" class="disabled">
                   <i class="ri-magic-line"></i>
                   <span class="menu-text">Disabled Link</span>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- Sidebar menu ends -->
@@ -1053,7 +1053,7 @@
                           </div>
                           <div class="d-flex flex-column">
                             <h2 class="m-0 lh-1">3</h2>
-                            <p class="m-0">On going Labor</p>
+                            <p class="m-0">In Labor</p>
                           </div>
                         </div>
                         <div class="d-flex align-items-center">
@@ -1437,7 +1437,7 @@
               <div class="col-xxl-3 col-sm-6">
                 <div class="card mb-3">
                   <div class="card-header">
-                    <h5 class="card-title">Newborn Gender</h5>
+                    <h5 class="card-title">Newborn Baby</h5>
                   </div>
                   <div class="card-body">
                     <div class="auto-align-graph">
