--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from bootstrapget.com/demos/medflex-medical-admin-template/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 19 Nov 2024 00:43:29 GMT -->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap Gallery - Medical Admin Templates & Dashboards</title>
+    <title>Mama Track Login/Singup</title>
 
     <!-- Meta -->
     <meta
