update on doctor-dashboard

--- a/add-doctors.html
+++ b/add-doctors.html
@@ -370,7 +370,7 @@
                         alt="Hospital Admin Templates"
                       />
                       <div class="m-0">
-                        <h6 class="mb-1 fw-semibold">Nick Gonzalez</h6>
+                        <h6 class="mb-1 fw-semibold">Nikki Gonzalez</h6>
                         <p class="mb-1">
                           Appointed as a new President 2014-2025
                         </p>
@@ -435,7 +435,7 @@
             <div class="dropdown-menu dropdown-menu-end shadow-lg">
               <div class="px-3 py-2">
                 <span class="small">Admin</span>
-                <h6 class="m-0">James Bruton</h6>
+                <h6 class="m-0">Nikki Gonzalez</h6>
               </div>
               <div class="mx-3 my-2 d-grid">
                 <a href="login.html" class="btn btn-danger">Logout</a>
@@ -461,7 +461,7 @@
             />
             <div class="m-0">
               <h5 class="mb-1 profile-name text-nowrap text-truncate">
-                Nick Gonzalez
+                Nikki Gonzalez
               </h5>
               <p class="m-0 small profile-name text-nowrap text-truncate">
                 Dept Admin
