--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         alt="Hospital Admin Templates"
                       />
                       <div class="m-0">
-                        <h6 class="mb-1 fw-semibold">Nick Gonzalez</h6>
+                        <h6 class="mb-1 fw-semibold">Nikki Gonzalez</h6>
                         <p class="mb-1">
                           Appointed as a new President 2014-2025
                         </p>
@@ -453,7 +453,7 @@
             <div class="dropdown-menu dropdown-menu-end shadow-lg">
               <div class="px-3 py-2">
                 <span class="small">Admin</span>
-                <h6 class="m-0">Nick Gonzalez</h6>
+                <h6 class="m-0">Nikki Gonzalez</h6>
               </div>
               <div class="mx-3 my-2 d-grid">
                 <a href="login.html" class="btn btn-danger">Logout</a>
@@ -479,7 +479,7 @@
             />
             <div class="m-0">
               <h5 class="mb-1 profile-name text-nowrap text-truncate">
-                Nick Gonzalez
+                Nikki Gonzalez
               </h5>
               <p class="m-0 small profile-name text-nowrap text-truncate">
                 Dept Admin
@@ -698,7 +698,7 @@
                   </li>
                 </ul>
               </li>
-              <!-- <li class="treeview">
+               <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-car-washing-line"></i>
                   <span class="menu-text">Ambulance</span>
@@ -717,8 +717,8 @@
                     <a href="ambulance-call-list.html">Ambulance Call List</a>
                   </li>
                 </ul>
-              </li>
-              <li> -->
+              </li> -->
+              <li> 
                 <a href="events.html">
                   <i class="ri-calendar-line"></i>
                   <span class="menu-text">Event Management</span>
@@ -904,8 +904,8 @@
                   <i class="ri-alert-line"></i>
                   <span class="menu-text">Page Not Found</span>
                 </a>
-              </li>
-              <li> -->
+              </li> -->
+              <li> 
                 <a href="maintenance.html">
                   <i class="ri-auction-line"></i>
                   <span class="menu-text">Maintenance</span>
