--- a/dashboard3.html
+++ b/dashboard3.html
@@ -364,7 +364,7 @@
                         alt="Hospital Admin Templates"
                       />
                       <div class="m-0">
-                        <h6 class="mb-1 fw-semibold">Nick Gonzalez</h6>
+                        <h6 class="mb-1 fw-semibold">Nikki Gonzalez</h6>
                         <p class="mb-1">
                           Appointed as a new President 2014-2025
                         </p>
@@ -424,7 +424,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <div class="avatar-box">JB<span class="status busy"></span></div>
+              <div class="avatar-box">NG<span class="status busy"></span></div>
             </a>
             <div class="dropdown-menu dropdown-menu-end shadow-lg">
               <div class="px-3 py-2">
@@ -455,7 +455,7 @@
             />
             <div class="m-0">
               <h5 class="mb-1 profile-name text-nowrap text-truncate">
-                Nick Gonzalez
+                Nikki Gonzalez
               </h5>
               <p class="m-0 small profile-name text-nowrap text-truncate">
                 Dept Admin
@@ -568,7 +568,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-building-2-line"></i>
                   <span class="menu-text">Departments</span>
@@ -584,7 +584,7 @@
                     <a href="edit-department.html">Edit Department</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-secure-payment-line"></i>
@@ -674,7 +674,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-car-washing-line"></i>
                   <span class="menu-text">Ambulance</span>
@@ -693,7 +693,7 @@
                     <a href="ambulance-call-list.html">Ambulance Call List</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li>
                 <a href="events.html">
                   <i class="ri-calendar-line"></i>
@@ -712,7 +712,7 @@
                   <span class="menu-text">News & Updates</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-color-filter-line"></i>
                   <span class="menu-text">UI Elements</span>
@@ -755,8 +755,8 @@
                     <a href="spinners.html">Spinners</a>
                   </li>
                 </ul>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-notification-badge-line"></i>
                   <span class="menu-text">Jquery Components</span>
@@ -781,7 +781,7 @@
                     <a href="tooltips.html">Tooltips</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-terminal-window-line"></i>
@@ -811,13 +811,13 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="tables.html">
                   <i class="ri-table-line"></i>
                   <span class="menu-text">Tables</span>
                 </a>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-bar-chart-line"></i>
                   <span class="menu-text">Graphs</span>
@@ -830,31 +830,31 @@
                     <a href="morris.html">Morris Graphs</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="maps.html">
                   <i class="ri-road-map-line"></i>
                   <span class="menu-text">Vector Maps</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="icons.html">
                   <i class="ri-send-plane-2-line"></i>
                   <span class="menu-text">Icons</span>
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="settings.html">
                   <i class="ri-settings-5-line"></i>
                   <span class="menu-text">Account Settings</span>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="typography.html">
                   <i class="ri-font-size"></i>
                   <span class="menu-text">Typography</span>
                 </a>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-login-circle-line"></i>
@@ -875,11 +875,11 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="page-not-found.html">
                   <i class="ri-alert-line"></i>
                   <span class="menu-text">Page Not Found</span>
-                </a>
+                </a> -->
               </li>
               <li>
                 <a href="maintenance.html">
@@ -887,7 +887,7 @@
                   <span class="menu-text">Maintenance</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-dropdown-list"></i>
                   <span class="menu-text">Menu Level</span>
@@ -925,21 +925,21 @@
                     <a href="#!">Level One Link</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="default.html">
                   <i class="ri-send-plane-line"></i>
                   <span class="menu-text">External Link</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-exchange-line"></i>
                   <span class="menu-text">Chip</span>
                   <span class="badge bg-primary ms-auto">6</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-ticket-line"></i>
                   <span class="menu-text">Badge</span>
@@ -947,13 +947,13 @@
                     >Chip</span
                   >
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!" class="disabled">
                   <i class="ri-magic-line"></i>
                   <span class="menu-text">Disabled Link</span>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- Sidebar menu ends -->
@@ -1051,7 +1051,7 @@
                               <i class="ri-syringe-line fs-1 text-danger"></i>
                             </div>
                             <h1 class="text-danger">2</h1>
-                            <h6>Surgeries</h6>
+                            <h6>Delivery</h6>
                             <span class="badge bg-danger">15% High</span>
                           </div>
                         </div>
