--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -364,7 +364,7 @@
                         alt="Hospital Admin Templates"
                       />
                       <div class="m-0">
-                        <h6 class="mb-1 fw-semibold">Nick Gonzalez</h6>
+                        <h6 class="mb-1 fw-semibold">Nikki Gonzalez</h6>
                         <p class="mb-1">
                           Appointed as a new President 2014-2025
                         </p>
@@ -424,12 +424,12 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <div class="avatar-box">JB<span class="status busy"></span></div>
+              <div class="avatar-box">NG<span class="status busy"></span></div>
             </a>
             <div class="dropdown-menu dropdown-menu-end shadow-lg">
               <div class="px-3 py-2">
                 <span class="small">Admin</span>
-                <h6 class="m-0">James Bruton</h6>
+                <h6 class="m-0">Nikki Gonzalez</h6>
               </div>
               <div class="mx-3 my-2 d-grid">
                 <a href="login.html" class="btn btn-danger">Logout</a>
@@ -455,7 +455,7 @@
             />
             <div class="m-0">
               <h5 class="mb-1 profile-name text-nowrap text-truncate">
-                Nick Gonzalez
+                Nikki Gonzalez
               </h5>
               <p class="m-0 small profile-name text-nowrap text-truncate">
                 Dept Admin
@@ -479,12 +479,12 @@
                   <span class="menu-text">Medical Dashboard</span>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="dashboard3.html">
                   <i class="ri-home-5-line"></i>
                   <span class="menu-text">Dentist Dashboard</span>
                 </a>
-              </li>
+              </li> -->
               <li class="treeview active current-page">
                 <a href="#!">
                   <i class="ri-stethoscope-line"></i>
@@ -570,7 +570,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-building-2-line"></i>
                   <span class="menu-text">Departments</span>
@@ -586,7 +586,7 @@
                     <a href="edit-department.html">Edit Department</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-secure-payment-line"></i>
@@ -676,7 +676,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-car-washing-line"></i>
                   <span class="menu-text">Ambulance</span>
@@ -695,7 +695,7 @@
                     <a href="ambulance-call-list.html">Ambulance Call List</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li>
                 <a href="events.html">
                   <i class="ri-calendar-line"></i>
@@ -714,7 +714,7 @@
                   <span class="menu-text">News & Updates</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-color-filter-line"></i>
                   <span class="menu-text">UI Elements</span>
@@ -757,8 +757,8 @@
                     <a href="spinners.html">Spinners</a>
                   </li>
                 </ul>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-notification-badge-line"></i>
                   <span class="menu-text">Jquery Components</span>
@@ -783,7 +783,7 @@
                     <a href="tooltips.html">Tooltips</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-terminal-window-line"></i>
@@ -813,13 +813,13 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="tables.html">
                   <i class="ri-table-line"></i>
                   <span class="menu-text">Tables</span>
                 </a>
-              </li>
-              <li class="treeview">
+              </li> -->
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-bar-chart-line"></i>
                   <span class="menu-text">Graphs</span>
@@ -832,31 +832,31 @@
                     <a href="morris.html">Morris Graphs</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="maps.html">
                   <i class="ri-road-map-line"></i>
                   <span class="menu-text">Vector Maps</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="icons.html">
                   <i class="ri-send-plane-2-line"></i>
                   <span class="menu-text">Icons</span>
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="settings.html">
                   <i class="ri-settings-5-line"></i>
                   <span class="menu-text">Account Settings</span>
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="typography.html">
                   <i class="ri-font-size"></i>
                   <span class="menu-text">Typography</span>
                 </a>
-              </li>
+              </li> -->
               <li class="treeview">
                 <a href="#!">
                   <i class="ri-login-circle-line"></i>
@@ -877,19 +877,19 @@
                   </li>
                 </ul>
               </li>
-              <li>
+              <!-- <li>
                 <a href="page-not-found.html">
                   <i class="ri-alert-line"></i>
                   <span class="menu-text">Page Not Found</span>
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="maintenance.html">
                   <i class="ri-auction-line"></i>
                   <span class="menu-text">Maintenance</span>
                 </a>
               </li>
-              <li class="treeview">
+              <!-- <li class="treeview">
                 <a href="#!">
                   <i class="ri-dropdown-list"></i>
                   <span class="menu-text">Menu Level</span>
@@ -927,21 +927,21 @@
                     <a href="#!">Level One Link</a>
                   </li>
                 </ul>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="default.html">
                   <i class="ri-send-plane-line"></i>
                   <span class="menu-text">External Link</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-exchange-line"></i>
                   <span class="menu-text">Chip</span>
                   <span class="badge bg-primary ms-auto">6</span>
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!">
                   <i class="ri-ticket-line"></i>
                   <span class="menu-text">Badge</span>
@@ -949,13 +949,13 @@
                     >Chip</span
                   >
                 </a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href="#!" class="disabled">
                   <i class="ri-magic-line"></i>
                   <span class="menu-text">Disabled Link</span>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- Sidebar menu ends -->
@@ -1027,7 +1027,7 @@
                             <div class="text-white mt-3">
                               <h6>Good Morning,</h6>
                               <h3>Dr. Jessika Linda</h3>
-                              <h6>Gynecologist, MS, MD, MBBS</h6>
+                              <h6>Midwife</h6>
                               <h5>
                                 You have total
                                 <span class="badge bg-danger"
@@ -1262,18 +1262,15 @@
               <div class="col-xxl-3 col-sm-6">
                 <div class="card mb-3">
                   <div class="card-header">
-                    <h5 class="card-title">Patients Type</h5>
+                    <h5 class="card-title">Newly born babies</h5>
                   </div>
                   <div class="card-body">
                     <div class="scroll300 auto-align-graph">
                       <div id="gender"></div>
                       <div class="mt-3 text-center">
-                        <span class="badge bg-primary">15%</span> male patients
-                        decreased than last month.
-                        <span class="badge bg-danger">30%</span> female patients
-                        increase than last month.
-                        <span class="badge bg-warning">60%</span> kid patients
-                        increase than last month.
+                        <span class="badge bg-primary">70%</span>Male
+
+                        <span class="badge bg-danger">30%</span> Female
                       </div>
                     </div>
                   </div>
@@ -1466,16 +1463,15 @@
               <div class="col-xxl-3 col-sm-6">
                 <div class="card mb-3">
                   <div class="card-header">
-                    <h5 class="card-title">Surgeries</h5>
+                    <h5 class="card-title">Newborn Babies</h5>
                   </div>
                   <div class="card-body">
                     <div class="scroll300 auto-align-graph">
                       <div id="surgeries"></div>
                       <div class="mt-2 text-center">
-                        <span class="badge bg-primary">22%</span> male patients
-                        decreased than last month.
-                        <span class="badge bg-danger">38%</span> female patients
-                        increase than last month.
+                        <span class="badge bg-primary">70%</span> newborn males.
+                        <span class="badge bg-danger">30%</span> newborn
+                        females.
                       </div>
                     </div>
                   </div>
